Add new component for top banner bar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<!--The content below is only a placeholder and can be replaced.-->
+<div>
+  <app-top-banner></app-top-banner>
+</div>
 <div>
   <img alt="Gamasutra Logo" src="https://twimgs.com/gamasutra/images/gamasutra_logo.png">
 </div>
