Create new component for nav/search bar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,3 +4,6 @@
 <div>
   <img alt="Gamasutra Logo" src="https://twimgs.com/gamasutra/images/gamasutra_logo.png">
 </div>
+<div>
+  <app-site-nav></app-site-nav>
+</div>
