Styling site-nav bar

--- a/src/app/site-nav/site-nav.component.html
+++ b/src/app/site-nav/site-nav.component.html
@@ -1,12 +1,13 @@
-<p>
-  site-nav works!
-</p>
-<div>
-
+<div class="jobs">
+  <a href="#">GAME JOBS</a>
 </div>
-<div>
-
+<div class="nav">
+  <a *ngFor="let link of navLinkList" href={{link.link}}>{{link.name}}</a>
 </div>
-<div>
-
+<div class="search">
+  <form>
+    <label for="search">SEARCH</label>
+    <input type="text">
+    <button type="button">GO</button>
+  </form>
 </div>
