--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div>
   <app-top-banner></app-top-banner>
 </div>
-<div>
+
+<div  class='container'>
   <img alt="Gamasutra Logo" src="https://twimgs.com/gamasutra/images/gamasutra_logo.png">
-</div>
-<div>
+  <br>
   <app-site-nav></app-site-nav>
 </div>
