--- a/src/app/site-nav/site-nav.component.css
+++ b/src/app/site-nav/site-nav.component.css
@@ -1,10 +1,46 @@
+.wrapper {
+  min-width: 100%;
+  height: 30px;
+  background-color: #DDD;
+}
 div {
   display: inline-block;
+  font-size: 9px;
+  font-weight: 700;
+  line-height: 13.5px;
+  height: 30px;
 }
 .jobs {
+  display: block;
+  float: left;
   background-color: #D96A00;
+  background-clip: border-box;
+  width: 124px;
+  text-align: center;
 }
 .jobs a {
   color: white;
   text-decoration: none;
+}
+.jobs a:hover {
+  cursor: pointer;
+  text-decoration: underline;
+}
+.search {
+  display: block;
+  float: right;
+  color: white;
+  background: linear-gradient(#666, #333);
+}
+button {
+  color: white;
+  border: 1px;
+  padding: 0px;
+  width: 21px;
+  height: 16px;
+  background-color: transparent;
+}
+button:hover {
+  cursor: pointer;
+  text-decoration: underline;
 }
