--- a/src/app/site-nav/site-nav.component.css
+++ b/src/app/site-nav/site-nav.component.css
@@ -57,6 +57,8 @@ input {
   border: 0px;
   padding: 0px;
   height: 25px;
+  margin-left: 10px;
+  margin-right: 5px;
 }
 button {
   color: white;
