initial styling for topic bar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,4 +6,7 @@
   <img alt="Gamasutra Logo" src="https://twimgs.com/gamasutra/images/gamasutra_logo.png">
   <br>
   <app-site-nav></app-site-nav>
+  <app-topic-bar></app-topic-bar>
 </div>
+
+<app-bottom-banner></app-bottom-banner>
