--- a/src/app/topic-bar/topic-bar.component.html
+++ b/src/app/topic-bar/topic-bar.component.html
@@ -1,3 +1,11 @@
-<p>
-  topic-bar works!
-</p>
+<div class="wrapper">
+    <ul class="nav nav-tabs nav-justified" role="tablist">
+      <li class="nav-item"><a class="nav-link" role="tab" href="#">ALL</a></li>
+      <li class="nav-item"><a class="nav-link" role="tab" href="#">CONSOLE/PC</a></li>
+      <li class="nav-item"><a class="nav-link" role="tab" href="#">SMARTPHONE/TABLET</a></li>
+      <li class="nav-item"><a class="nav-link" role="tab" href="#">INDEPENDENT</a></li>
+      <li class="nav-item"><a class="nav-link" role="tab" href="#">VR/AR</a></li>
+      <li class="nav-item"><a class="nav-link" role="tab" href="#">SOCIAL/ONLINE</a></li>
+      <li class="nav-item"><a class="nav-link developer" role="tab" href="#">GAME DEVELOPER ON GAMASUTRA</a></li>
+    </ul>
+</div>
