--- a/src/app/bottom-banner/bottom-banner.component.html
+++ b/src/app/bottom-banner/bottom-banner.component.html
@@ -1,3 +1,56 @@
-<p>
-  bottom-banner works!
-</p>
+<div class="footer">
+  <div class="row container top">
+    <div class="col-2">
+      <img src="https://twimgs.com/nojitter/gama/UBM_Logo_White.png" alt="UBM Logo">
+    </div>
+    <div class="col-10">
+      <ul class="tech">
+        <li class="title">TECHNOLOGY GROUP</li>
+        <li><a href="#">Black Hat</a></li>
+        <li><a href="#">Content Marketing Institute</a></li>
+        <li><a href="#">Content Marketing World</a></li>
+        <li><a href="#">Dark Reading</a></li>
+      </ul>
+      <ul>
+        <li><a href="#">Enterprise Connect</a></li>
+        <li><a href="#">GDC</a></li>
+        <li><a href="#">Gamasutra</a></li>
+        <li><a href="#">HDI</a></li>
+      </ul>
+      <ul>
+        <li><a href="#">ICMI</a></li>
+        <li><a href="#">InformationWeek</a></li>
+        <li><a href="#">INsecurity</a></li>
+        <li><a href="#">Interop ITX</a></li>
+      </ul>
+      <ul>
+        <li><a href="#">Network Computing</a></li>
+        <li><a href="#">No Jitter</a></li>
+        <li><a href="#">Service Management World</a></li>
+        <li><a href="#">XRDC</a></li>
+      </ul>
+      <ul>
+        <li class="title">COMMUNITIES SERVED</li>
+        <li><a href="#">Content Marketing</a></li>
+        <li><a href="#">Enterprise IT</a></li>
+        <li><a href="#">Enterprise Communications</a></li>
+        <li><a href="#">Game Development</a></li>
+        <li><a href="#">Information Security</a></li>
+        <li><a href="#">IT Services & Support</a></li>
+      </ul>
+      <ul>
+        <li class="title">WORKING WITH US</li>
+        <li><a href="#">Advertising Contacts</a></li>
+        <li><a href="#">Event Calendar</a></li>
+        <li><a href="#">Tech Marketing</a></li>
+        <li><a href="#">Solutions</a></li>
+        <li><a href="#">Contact Us</a></li>
+        <li><a href="#">Licensing</a></li>
+      </ul>
+    </div>
+  </div>
+  <div class="row">
+
+  </div>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+</div>
