--- a/src/app/bottom-banner/bottom-banner.component.html
+++ b/src/app/bottom-banner/bottom-banner.component.html
@@ -4,26 +4,26 @@
       <img src="https://twimgs.com/nojitter/gama/UBM_Logo_White.png" alt="UBM Logo">
     </div>
     <div class="col-10">
-      <ul class="tech">
+      <ul class="tech group">
         <li class="title">TECHNOLOGY GROUP</li>
         <li><a href="#">Black Hat</a></li>
         <li><a href="#">Content Marketing Institute</a></li>
         <li><a href="#">Content Marketing World</a></li>
         <li><a href="#">Dark Reading</a></li>
       </ul>
-      <ul>
+      <ul class="tech">
         <li><a href="#">Enterprise Connect</a></li>
         <li><a href="#">GDC</a></li>
         <li><a href="#">Gamasutra</a></li>
         <li><a href="#">HDI</a></li>
       </ul>
-      <ul>
+      <ul class="tech">
         <li><a href="#">ICMI</a></li>
         <li><a href="#">InformationWeek</a></li>
         <li><a href="#">INsecurity</a></li>
         <li><a href="#">Interop ITX</a></li>
       </ul>
-      <ul>
+      <ul class="tech">
         <li><a href="#">Network Computing</a></li>
         <li><a href="#">No Jitter</a></li>
         <li><a href="#">Service Management World</a></li>
@@ -49,8 +49,12 @@
       </ul>
     </div>
   </div>
-  <div class="row">
-
+  <div>
+    <ul id="legal">
+      <li><a href="#">Terms of Service</a></li>
+      <li><a href="#">Privacy Statement</a></li>
+      <li><a href="#">Legal Entities</a></li>
+      <li>Copyright (c) 2018 UBM, All rights reserved</li>
+    </ul>
   </div>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 </div>
