--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,6 +2,21 @@
   background-color: transparent;
   min-width: 1006px;
 }
+.wrapper {
+  min-width: 838px;
+  max-width: 838px;
+  background-color: white;
+}
 img {
   margin-bottom: 20px;
+}
+.row {
+ background-color: #EEE;
+ border: solid black 1px;
+}
+.col-3 {
+  border: solid black 1px;
+}
+.col-6 {
+  border: solid black 1px;
 }
