--- a/src/app/left-bar/left-bar.component.html
+++ b/src/app/left-bar/left-bar.component.html
@@ -1,3 +1,35 @@
-<p>
-  left-bar works!
-</p>
+<div class="container-fluid">
+  <div class="">
+    <form>
+      <h4>Member Login</h4>
+      <label for="email">Email:</label>
+      <input type="text">
+      <br>
+      <label for="Password:">Password:</label>
+      <input type="text">
+      <button type="button">Login</button>
+    </form>
+    <p><a href="#">Forgot Password?</a><a href="#">Sign Up</a></p>
+  </div>
+  <div class="">
+
+  </div>
+  <div class="">
+
+  </div>
+  <div class="">
+
+  </div>
+  <div class="">
+
+  </div>
+  <div class="">
+
+  </div>
+  <div class="">
+
+  </div>
+  <div class="">
+
+  </div>
+</div>
