--- a/src/app/topic-bar/topic-bar.component.css
+++ b/src/app/topic-bar/topic-bar.component.css
@@ -14,6 +14,12 @@ li {
   margin-right: 2px;
   margin-left: 2px;
 }
+a {
+  color: white;
+}
+a:hover {
+  text-decoration: underline;
+}
 .developer {
   height: 33px;
 }
