--- a/src/app/left-bar/left-bar.component.html
+++ b/src/app/left-bar/left-bar.component.html
@@ -11,14 +11,47 @@
     </form>
     <p><a href="#">Forgot Password?</a><a href="#">Sign Up</a></p>
   </div>
-  <div class="">
-
+  <div class="socialMedia">
+    <ul>
+      <li><a href="#"><img src="https://twimgs.com/gamasutra/images/icon_facebook.png" alt="Facebook"></a></li>
+      <li><a href="#"><img src="https://twimgs.com/gamasutra/images/icon_twitter.png" alt="Twitter"></a></li>
+      <li><a href="#"><img src="https://twimgs.com/gamasutra/images/icon_feed.png" alt="RSS"></a></li>
+      <li><a href="#"><img src="https://twimgs.com/gamasutra/images/icon_newsletter.png" alt="Email"></a></li>
+    </ul>
   </div>
-  <div class="">
-
+  <div class="topics">
+    <div class="programming">
+      <img src="https://twimgs.com/gamasutra/images/button_programming.gif" alt="Programming Icon">
+      <p>PROGRAMMING</p>
+    </div>
+    <div class="art">
+      <img src="https://twimgs.com/gamasutra/images/button_art.gif" alt="Art Icon">
+      <p>ART</p>
+    </div>
+    <div class="audio">
+      <img src="https://twimgs.com/gamasutra/images/button_audio.gif" alt="Audio Icon">
+      <p>AUDIO</p>
+    </div>
+    <div class="design">
+      <img src="https://twimgs.com/gamasutra/images/button_design.gif" alt="Design Icon">
+      <p>DESIGN</p>
+    </div>
+    <div class="production">
+      <img src="https://twimgs.com/gamasutra/images/button_production.gif" alt="Production Icon">
+      <p>PRODUCTION</p>
+    </div>
+    <div class="biz/marketing">
+      <img src="https://twimgs.com/gamasutra/images/button_business.gif" alt="Biz/Marketing Icon">
+      <p>BIZ/MARKETING</p>
+    </div>
   </div>
-  <div class="">
+  <div class="Latest Jobs">
+    <div class="header">
 
+    </div>
+    <div class="">
+
+    </div>
   </div>
   <div class="">
 
