Created template for content panels

--- a/src/app/left-bar/left-bar.component.html
+++ b/src/app/left-bar/left-bar.component.html
@@ -47,22 +47,34 @@
   </div>
   <div class="Latest Jobs">
     <div class="header">
-
+      <img src="" alt="">
+      <h5>Title</h5>
     </div>
     <div class="">
-
+      <a href="#">View All</a>
+      <a href="#">SAMPLE</a>
+      <hr>
+      <strong>May 11, 2018</strong>
+      <hr>
+      <ul>
+        <li>Link 1</li>
+        <li>Link 2</li>
+        <li>Link 3</li>
+        <li>Link 4</li>
+        <li>Link 5</li>
+      </ul>
     </div>
   </div>
   <div class="">
-
+    <app-content-panel></app-content-panel>
   </div>
   <div class="">
-
+    <app-content-panel></app-content-panel>
   </div>
   <div class="">
-
+    <app-content-panel></app-content-panel>
   </div>
   <div class="">
-
+    <app-content-panel></app-content-panel>
   </div>
 </div>
