--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -23,7 +23,7 @@ img {
 footer {
   border-top: 1px solid yellow;
   padding-top: 15px;
-  position: fixed;
+  position: relative;
   bottom: 0;
   width: 100%;
   background-color: black;
