--- a/src/app/left-bar/left-bar.component.html
+++ b/src/app/left-bar/left-bar.component.html
@@ -66,7 +66,7 @@
     </div>
   </div>
   <div class="">
-    
+    <app-content-panel></app-content-panel>
   </div>
   <div class="">
     <app-content-panel></app-content-panel>
