--- a/src/app/major-stories/major-stories.component.html
+++ b/src/app/major-stories/major-stories.component.html
@@ -1,3 +1,12 @@
-<p>
-  major-stories works!
-</p>
+<div class="row">
+  <div class="col-6">
+    <img src={{mainArticle?.image}} alt="Article Thumbnail Image">
+    <h3>{{mainArticle?.title}}</h3>
+  </div>
+  <div class="col-6">
+    <div *ngFor="let article of articlesToList">
+      <h3>{{article.title}}</h3>
+      <hr>
+    </div>
+  </div>
+</div>
