Add routing functionality, new main component to format landing page and slight refactor to move styling from app.component.html to main.component.html

--- a/src/app/major-stories/major-stories.component.html
+++ b/src/app/major-stories/major-stories.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-6">
+  <div class="col-6 main">
     <img src={{mainArticle?.image}} alt="Article Thumbnail Image">
     <h3>{{mainArticle?.title}}</h3>
   </div>
