--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,17 +12,7 @@
         <app-left-bar></app-left-bar>
       </div>
       <div class="col-9">
-        <div class="row">
-          <app-major-stories></app-major-stories>
-        </div>
-        <div class="row">
-          <div class="col-6">
-            <app-recent-stories></app-recent-stories>
-          </div>
-          <div class="col-6">
-            <app-right-bar></app-right-bar>
-          </div>
-        </div>
+        <router-outlet></router-outlet>
       </div>
     </div>
   </div>
