Add post component and routing to add new articles to database from app

--- a/src/app/right-bar/right-bar.component.html
+++ b/src/app/right-bar/right-bar.component.html
@@ -1,3 +1,11 @@
-<p>
-  right-bar works!
-</p>
+<div>
+  <div class="header">
+    <img src="https://twimgs.com/gamasutra//images/icon_blogs.png" alt="Image">
+    <h3>Write for Gamasutra!</h3>
+  </div>
+  <div class="">
+    <img src="https://twimgs.com/gamasutra//images/img_joinTheConversation.jpg" alt="Fingers on the Keyboard">
+    <p>Share your thoughts, knowledge and ideas with the largest community of game developers in the world. If we like what we see, we'll promote your pose on our home page.</p>
+    <button class="btn" (click)="goToPost()">START BLOGGING NOW</button>
+  </div>
+</div>
