Refactor code to be more DRY

--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -11,3 +11,5 @@
   <br>
   <button class="btn" (click)="submitNewArticle(newTitle.value, newAuthor.value, newImage.value, newParagraphs.value); newTitle.value=''; newAuthor.value=''; newImage.value=''; newParagraphs.value=''">Submit my Article!</button>
 </div>
+<br>
+<button (click)="goHome()" class="button">Go Back To Homepage</button>
