--- a/src/app/major-stories/major-stories.component.css
+++ b/src/app/major-stories/major-stories.component.css
@@ -1,6 +1,18 @@
+.row {
+  height: 400px;
+}
 img {
   width: 100%;
 }
 .main {
   text-align: center;
+}
+.sample {
+  height: 80px;
+}
+h5 {
+  font-size: 15px;
+}
+h3 {
+  font-size: 25px;
 }
