--- a/src/app/major-stories/major-stories.component.html
+++ b/src/app/major-stories/major-stories.component.html
@@ -3,9 +3,9 @@
     <img src={{mainArticle?.image}} alt="Article Thumbnail Image">
     <h3>{{mainArticle?.title}}</h3>
   </div>
-  <div class="col-6">
+  <div class="col-6 sample">
     <div *ngFor="let article of articlesToList">
-      <h3>{{article.title}}</h3>
+      <h5>{{article.title}}</h5>
       <hr>
     </div>
   </div>
