Edit formatting of left bar component

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,6 +7,10 @@
   max-width: 838px;
   background-color: white;
 }
+.col-3 {
+  padding-left: 2px;
+  padding-right: 2px;
+}
 img {
   margin-bottom: 20px;
 }
