--- a/src/app/left-bar/left-bar.component.html
+++ b/src/app/left-bar/left-bar.component.html
@@ -1,15 +1,24 @@
-<div class="container-fluid">
-  <div class="">
+<div id="left-col">
+  <div class="login">
     <form>
       <h4>Member Login</h4>
-      <label for="email">Email:</label>
-      <input type="text">
-      <br>
-      <label for="Password:">Password:</label>
-      <input type="text">
-      <button type="button">Login</button>
+      <div class="row">
+        <div class="col-6 info">
+          <label for="email">Email:</label>
+          <br>
+          <label for="Password:">Password:</label>
+        </div>
+        <div class="col-6">
+          <input type="text">
+          <br>
+          <input type="text">
+          <button type="button">Login</button>
+        </div>
+      </div>
     </form>
-    <p><a href="#">Forgot Password?</a><a href="#">Sign Up</a></p>
+    <div class="help">
+      <p><a href="#" id="forgotPass">Forgot Password?</a>     <a href="#" id="signUp">Sign Up</a></p>
+    </div>
   </div>
   <div class="socialMedia">
     <ul>
